@@ -6,6 +6,7 @@ What's New for OpenJPEG
 + : added
 
 October 11, 2011
+* [mickael] WIP: add stream length value to read unknown marker size, backport 855 into V2 framework, correct memory leak into get_cstr_info
 * [mickael] WIP: add output elements about decoding of jp2 files with last tile part lenght equal zero
 * [mickael] WIP: correct mistake with JP2 files and manage correctly the text_GBR.jp2 filecase
 
